Switch to new webapollo